# czff-lang

./: .gitignore  .gitmodules  CompilerConfig.json  README.md  build.ps1  config.json  run.ps1
.github/workflows/: build.yaml  build.yml  jit.yml
Compiler/: Compiler.csproj  Compiler.sln  CompilerConfig.json  GeneratorConfig.json  Program.cs  somefile
Compiler.Tests/: Compiler.Tests.csproj  OneLexemeTestData.cs
Compiler.Tests/GeneratorTests/: MVPGeneratorTest.cs
Compiler.Tests/LexerTests/: LexerTests.cs  OneLexemeTestData.cs  WhitespacesCommentsTestsData.cs
Compiler.Tests/OptimizerTests/: ConstantFoldingTests.cs  DeadCodeEliminationTests.cs
Compiler.Tests/Parser/: ParserTests.cs  SyntaxErrorTests.cs  SyntaxErrorTestsData.cs
Compiler.Tests/SemanticAnalysisTests/: AstStore.cs  SemanticAnalyzerErrorsData.cs  SemanticAnalyzerErrorsTests.cs  SemanticAnalyzerTests.cs  SymbolTableBuilderErrorTests.cs  SymbolTableBuilderErrorTestsData.cs  SymbolTableBuilderTests.cs
Compiler.Tests/SerializerTests/: GenerateRealFile.cs  MVPSerializerTests.cs  SerializingVisitorTests.cs
Compiler.Tests/Snapshots/: SnapshotTests.cs
Compiler.Tests/Storage/: AstStore.cs  BallStore.cs  SymbolTableStore.cs
Compiler.Tests/TaskTests/: PipelineTests.cs  PipelineTestsData.cs
Compiler/CompilerPipeline/: Pipeline.cs
Compiler/Generation/: BallGeneratingVisitor.cs  Generator.cs  GeneratorException.cs
Compiler/Generator/: Generator.cs
Compiler/Lexer/: CompilerLexer.cs  Cursor.cs  Lexer.cs  LexerException.cs  Token.cs  TokenType.cs
Compiler/Operations/: AriphmeticOperations.cs  IOperation.cs  IOperationVisitor.cs  JumpOperations.cs  LogicalOperations.cs  ProgramOperations.cs  SerializingVisitor.cs  StackOperations.cs
Compiler/Optimizations/: ConstantFoldingException.cs  ConstantFoldingOptimizer.cs  ConstantPropagationOptimizer.cs  DeadCodeEliminationOptimizer.cs  DeadCodeEliminationSecondStage.cs
Compiler/Parser/: CompilerParser.cs  INodeVisitor.cs  IVisitor.cs  Parser.cs  ParserException.cs
Compiler/Parser/AST/: AstNode.cs  AstTree.cs
Compiler/Parser/AST/Nodes/: BinaryOperator.cs  BinaryOperatorType.cs  BlockNode.cs  LiteralType.cs  ProgramNode.cs  UnaryOperator.cs  UnaryOperatorType.cs
Compiler/Parser/AST/Nodes/Core/: ArrayTypeNode.cs  FunctionParameterNode.cs  FunctionParametersNode.cs  IdentifierNode.cs  LiteralNode.cs  SimpleTypeNode.cs  TypeAnnotationNode.cs
Compiler/Parser/AST/Nodes/Expressions/: ArrayCreationExpressionNode.cs  ArrayIndexExpressionNode.cs  BinaryExpressionNode.cs  ExpressionNode.cs  FunctionCallExpressionNode.cs  IdentifierExpressionNode.cs  LiteralExpressionNode.cs  MemberAccessNode.cs  UnaryExpressionNode.cs
Compiler/Parser/AST/Nodes/Statements/: ArrayAssignmentStatementNode.cs  AssignmentStatementNode.cs  BreakStatementNode.cs  ClassDeclarationNode.cs  ContinueStatementNode.cs  DeclarationNode.cs  ElifStatementNode.cs  (+10 more)
Compiler/SemanticAnalysis/: SemanticAnalyzer.cs  SemanticException.cs  SymbolTableBuilder.cs
Compiler/SemanticAnalysis/Models/: ArraySymbol.cs  FunctionSymbol.cs  Symbol.cs  SymbolKind.cs  SymbolTable.cs  SymbolTableManager.cs  VariableSymbol.cs
Compiler/Serialization/: Serializer.cs
Compiler/Serialization/Handlers/: ClassesHandler.cs  ConstantsHandler.cs  FunctionsHandler.cs  Handler.cs  HeaderHandler.cs
Compiler/Serializer/: Serializer.cs
Compiler/SourceFiles/: Ball.cs  ClassItem.cs  ClassPool.cs  ConstantItem.cs  ConstantPool.cs  Field.cs  Function.cs  FunctionPool.cs  Header.cs  Method.cs
Compiler/SourceFiles/Constants/: BoolConstant.cs  Int128Constant.cs  Int16Constant.cs  Int64Constant.cs  Int8Constant.cs  IntConstant.cs  StringConstant.cs  UInt128Constant.cs  UInt16Constant.cs  UInt64Constant.cs  UInt8Constant.cs  UIntConstant.cs
Compiler/Util/: ByteConverter.cs  CompilerSettings.cs  GeneratorSettings.cs
Compiler/Util/LiteralTranslation/: INativeType.cs  NativeBool.cs  NativeInteger.cs  NativeInteger64.cs  NativeString.cs  NativeTypeBuilder.cs  NativeTypeException.cs
docs/: bytecode.md
docs/bytecode/: bytecode.md  bytecode_generator.md
docs/virtual-machine/: class-loader.md  runtime-data-area.md  vm-architecture.md
docs/virtual-machine/execution-engine/: execution-engine.md  garbage-collector.md  interpreter.md
test_files/: dce_test.czff  factorial.czff  first_example.czff  fourth_example.czff  merge_sort.czff  optimizations.czff  optimizations.out  second_example.czff  second_example.out  sieve.czff  sieve_w_func.czff  third_example.czff
virtual-machine/: CMakeLists.txt
virtual-machine/include/: bytecode_loader.hpp  call_frame.hpp  class_loader.hpp  common.hpp  heap_data_area.hpp  interpreter.hpp  runtime_data_area.hpp  virtual_machine.hpp
virtual-machine/include/garbage_collector/: garbage_collector.hpp
virtual-machine/include/jit/: generic_jit_optimizer.hpp  jit_compiler.hpp  jit_dummy.hpp  jit_x86_64.hpp
virtual-machine/include/runtime_data_area/: call_frame.hpp  heap_data_area.hpp  method_area.hpp  runtime_data_area.hpp  stack_data_area.hpp
virtual-machine/include/util/: ball_disassembler.hpp  int128.hpp  uint128.hpp
virtual-machine/src/: bytecode_loader.cpp  call_frame.cpp  class_loader.cpp  common.cpp  heap_data_area.cpp  interpreter.cpp  main.cpp  runtime_data_area.cpp  virtual_machine.cpp
virtual-machine/src/jit/: generic_jit_optimizer.cpp  jit_compiler.cpp  jit_dummy.cpp  jit_x86_64.cpp
virtual-machine/src/runtime_data_area/: call_frame.cpp  classic_garbage_collector.cpp  heap_data_area.cpp  method_area.cpp  runtime_data_area.cpp  stack_data_area.cpp
virtual-machine/src/util/: ball_disassembler.cpp  int128.cpp  uint128.cpp
virtual-machine/tests/: CMakeLists.txt  byte_reader_tests.cpp  class_loader_tests.cpp
virtual-machine/tests/include/: ball_builder.hpp  class_loader_test_utils.hpp  minimal_ball.hpp
virtual-machine/tests/src/: byte_reader_tests.cpp  class_loader_test_util.cpp  class_loader_tests.cpp  garbage_collection_tests.cpp  int128_tests.cpp  interpreter_tests.cpp  vm_tests.cpp
virtual-machine/tests/src/jit/: jit_optimizer_tests.cpp  jit_x86_64_tests.cpp
